Add new pressure plate types

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 DiscoverWarps
 ====================================================================
 
-A Skyrim style warp plugin for Bukkit
+A Skyrim style warp plugin for Spigot / Paper servers
